// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Renders as expected 1`] = `
<div
  className="alert alert-fail"
>
  Error!
</div>
`;

exports[`Alert Renders with error message as expected 1`] = `
<DocumentFragment>
  <div
    class="alert alert-fail"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert Renders with success message as expected 1`] = `
<DocumentFragment>
  <div
    class="alert alert-success"
  >
    Success!!!
  </div>
</DocumentFragment>
`;
